# PomoCLI-time-tracker

./: .gitignore  DEVELOPERS.md  README.md  pyproject.toml
assets/: tomato.icns
macos/PomoCLITimer/: Makefile  Package.swift
macos/PomoCLITimer/Resources/: Info.plist
macos/PomoCLITimer/Sources/PomoCLITimer/: AppDelegate.swift  ConfigReader.swift  DaemonClient.swift  DistractionFeedbackController.swift  GlobalHotkeyManager.swift  IdleMonitor.swift  LockSleepMonitor.swift  QuickStartWindowController.swift  StatusBarController.swift
pomocli/: __init__.py  time_util.py
pomocli/cli/: main.py  session_inspect.py
pomocli/config/: __init__.py
pomocli/daemon/: __main__.py  client.py  lifecycle.py  macos.py  server.py  timer.py
pomocli/db/: backup.py  connection.py  operations.py  schema.sql
pomocli/metrics/: __init__.py  focus.py
pomocli/ui/: dashboard.py  logo.py  logo_ansi_generated.py  reports.py
pomocli/utils/: git.py  text.py
scripts/: generate_cli_logo.py  normalize_names.py  seed_test_db.py  stamp_version.py
tests/: test_backup.py  test_cli.py  test_daemon_server.py  test_db.py  test_focus_metrics.py  test_integration.sh  test_last_git_context.py  test_lock_pause_flow.py  test_name_normalization.py  test_normalize_names_script.py  test_reports.py  test_time_util.py  test_timer.py
